--- a/templates/base.html
+++ b/templates/base.html
@@ -110,20 +110,8 @@ right {
         </div><!--/.nav-collapse -->
       </div>
     </div>
-
     <div class="container">
-
-      $:page
-
-    </div><!-- /.container -->
-
-
-  <!-- 
-	<p><span class="button"><a href="/">Editor&nbsp;&nbsp;</a></span></p>
-  <span class="button"><a href="/settings/globals/1">Global</a></span><br><br>
-  <span class="button"><a href="/settings/locals-a/1">Local A</a></span><br><br>
-  <span class="button"><a href="/settings/locals-b/1">Local B</a></span><br><br>
-   -->
-
+    $:page
+    </div>
 </body>
 </html>
