--- a/templates/view.html
+++ b/templates/view.html
@@ -16,27 +16,14 @@ Project $master.project.projectname
 <link rel="stylesheet" type="text/css" href="/static/css/slider.css"/>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.9/paper.js"></script>
 <script src="/static/js/bootstrap-slider.js"></script>
-<script src="/static/js/jquery.tabSlideOut.v1.3.js"></script>
-
-<style type="text/css">
-.slide-out-div {
-    padding: 20px;
-    width: 200px;
-    background: #ccc;
-    border: 1px solid #29216d;
-}    
-</style>
 
 <div class="row">
   <div class="col-md-4">
   
     <div class="row layer-canvas-a">
-      <div class="col-md-1" style="position: relative;">
-        <form action="" method="post" class="extended slide-out-div">
-            <a class="handle" href="javascript:;" style="background-color: black;">Parameter</a>
-            <div style="z-index: -1;">
-                $:webctx.pointparam_extended_form.render()
-            </div>
+      <div class="col-md-1">
+        <form action="" method="post" class="extended" style="float: right;">
+            $:webctx.pointparam_extended_form.render()
         </form>
       </div>
 
@@ -181,12 +168,9 @@ Project $master.project.projectname
       </div>
 
 
-      <div class="col-md-1" style="position: relative;">
-        <form action="" method="post" class="extended slide-out-div left-slide-out-div">
-            <a class="left-handle" href="javascript:;" style="background-color: black;">Parameter</a>
-            <div style="z-index: -1;">
-                $:webctx.pointparam_extended_form.render()
-            </div>
+      <div class="col-md-1">
+        <form action="" method="post" class="extended" style="float: left;">
+            $:webctx.pointparam_extended_form.render()
         </form>
       </div>
 
@@ -571,32 +555,6 @@ jQuery(
     $$('.slider1').slider();
     $$('.slider2').slider();
     $$('.slider3').slider();
-
-    $$('.slide-out-div').tabSlideOut({
-        tabHandle: '.handle',                     //class of the element that will become your tab
-        pathToTabImage: 'images/contact_tab.gif', //path to the image for the tab //Optionally can be set using css
-        imageHeight: '122px',                     //height of tab image           //Optionally can be set using css
-        imageWidth: '40px',                       //width of tab image            //Optionally can be set using css
-        tabLocation: 'right',                      //side of screen where tab lives, top, right, bottom, or left
-        speed: 300,                               //speed of animation
-        action: 'click',                          //options: 'click' or 'hover', action to trigger animation
-        topPos: '0px',                          //position from the top/ use if tabLocation is left or right
-        leftPos: '20px',                          //position from left/ use if tabLocation is bottom or top
-        fixedPosition: false                      //options: true makes it stick(fixed position) on scroll
-    });
-
-    $$('.left-slide-out-div').tabSlideOut({
-        tabHandle: '.left-handle',                     //class of the element that will become your tab
-        pathToTabImage: 'images/contact_tab.gif', //path to the image for the tab //Optionally can be set using css
-        imageHeight: '122px',                     //height of tab image           //Optionally can be set using css
-        imageWidth: '40px',                       //width of tab image            //Optionally can be set using css
-        tabLocation: 'left',                      //side of screen where tab lives, top, right, bottom, or left
-        speed: 300,                               //speed of animation
-        action: 'click',                          //options: 'click' or 'hover', action to trigger animation
-        topPos: '0px',                          //position from the top/ use if tabLocation is left or right
-        leftPos: '20px',                          //position from left/ use if tabLocation is bottom or top
-        fixedPosition: false                      //options: true makes it stick(fixed position) on scroll
-    });
   }
 );
 </script>
